# rf-site-telemetry

./: .gitignore  LICENSE  README.md  arqui.md  first_commit_plan.md
cloud-api/: README.md  config.example.yaml  openapi.yaml  pyproject.toml
cloud-api/src/: auth.py
cloud-api/src/app/: auth.py  cli.py  db.py  main.py  models.py  settings.py
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.jsx  api.js
dashboard/src/components/: LineChart.jsx
dashboard/src/lib/: status.js
dashboard/src/pages/: Device.jsx  Devices.jsx
docs/: api.md  architecture.md  configuration.md  deployment.md  protocol.md  provisioning.md  spec_en.md  spec_es.md  threat-model.md
edge-agent/: README.md
edge-agent/config/: telemetry.example.yaml
edge-agent/src/agent/: collector_sim.py  config.py  envelope.py  http_client.py  main.py
edge-agent/systemd/: rfsite-telemetry.service
infra/: README.md  docker-compose.dev.yml
infra/deploy/: README.md  env.example  install.sh
infra/deploy/apache/: vhost.conf
infra/deploy/nginx/: rfsite-cloud-api.conf
infra/deploy/systemd/: rfsite-cloud-api.service  rfsite-simulator.service
infra/migrations/: 0001_init.sql  0002_api_keys.sql
tools/: README.md
tools/api_keys/: create_api_key.py  list_api_keys.py  revoke_api_key.py
tools/simulator/: README.md  sim_http.py
